feat: rearchitect local-first sqlite sync